tests/compiler/expected/output/AssignOperatorTypeError.shtk.txt
MODULE AssignOperatorTypeError.shtk
ERROR in Line 6 Col 10

    a += f
         ^
Type error, did not expect float,
expected int

AssignOperatorTypeError.shtk:6:9
